--- a/package.json
+++ b/package.json
@@ -1,18 +1,43 @@
 {
-  "name": "blog",
+  "name": "vitepress-blog",
+  "type": "module",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "author": "Meet you",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "serve": "vitepress serve docs",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@sugarat/theme": "^0.4.9",
+    "element-plus": "^2.7.2",
+    "vue": "3.4.36"
+  },
+  "directories": {
+    "doc": "docs"
+  },
   "devDependencies": {
-    "vitepress": "^1.3.2"
+    "@antfu/eslint-config": "^2.24.1",
+    "eslint": "^9.8.0",
+    "pagefind": "^1.1.0",
+    "sass": "^1.77.8",
+    "typescript": "^5.5.4",
+    "vitepress": "1.3.2"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@algolia/client-search",
+        "search-insights"
+      ]
+    }
+  },
+  "resolutions": {
+    "oh-my-live2d": "^0.19.3"
   }
 }
