ci(.github): 修改构建后产物的路径

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: dist
-          path: ./docs/.vuepress/dist
+          path: ./docs/.vitepress/dist
 
   # Deploy job to transfer build files to Windows server
   deploy:
